# swagger.json
@@ -28,19 +28,31 @@
     "/notification/start": {
       "post": {
         "tags": ["Notification Service"],
-        "description": "Start Notification service when status is stop ",
+        "description": "Start Notification Attendance service",
         "produces": ["application/json"],
         "responses": {
-          "200": {
+          "201": {
             "description": "Request sent and excuted successfully"
           }
         }
       }
     },
-    "/notification/status": {
+    "/notification/stop": {
+      "put": {
+        "tags": ["Notification Service"],
+        "description": "Stop Notification Attendance service",
+        "produces": ["application/json"],
+        "responses": {
+          "201": {
+            "description": "Request sent and excuted successfully"
+          }
+        }
+      }
+    },
+    "/notification/infos": {
       "get": {
         "tags": ["Notification Service"],
-        "summary": "Check status of notification service",
+        "summary": "Check informations of Notification Attendance service",
         "responses": {
           "200": {
             "description": "Message sent"
